# repository-trait-rs

./: Cargo.toml
src/: domain.rs  lib.rs  main.rs
src/application/: handler.rs
src/domain/: channel.rs
src/infrastructure/: persistence.rs
src/infrastructure/persistence/: channel.rs
