[package]
name = "repository"
version = "0.1.0"
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"

[lib]
name = "sentry"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Futures
futures-preview = { version = "=0.3.0-alpha.14", features = ["compat", "io-compat"] }
futures_legacy = { version = "0.1", package = "futures" }
# Concurrency
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
# Utils
try_future = "0.1.3"
# DATABASE
postgres = { version = "0.16.0-rc.1" }
r2d2 = {version = "0.8.4" }
r2d2_postgres = { version = "0.15.0-rc.1" }