[package]
name = "repository"
version = "0.1.0"
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"

[lib]
name = "sentry"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Futures
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "io-compat"] }
futures_legacy = { version = "0.1", package = "futures" }
# Concurrency
tokio = { version = "=0.1.19" }
# Utils
try_future = "0.1.3"
# Database
tokio-postgres = { version = "=0.4.0-rc.2", features = ["with-chrono-0_4"] }
bb8 = "0.3.0"
bb8-postgres = "0.3.0"
